[gd_scene load_steps=22 format=2]

[ext_resource path="res://misc/ui.tres" type="Theme" id=1]
[ext_resource path="res://misc/VPPixel-Simplified.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/editor.gd" type="Script" id=3]
[ext_resource path="res://sprites/tiles/floor.png" type="Texture" id=4]
[ext_resource path="res://sprites/tiles/wall.png" type="Texture" id=5]
[ext_resource path="res://sprites/tiles/start.png" type="Texture" id=6]
[ext_resource path="res://sprites/tiles/break.png" type="Texture" id=7]
[ext_resource path="res://sprites/tiles/i.png" type="Texture" id=8]
[ext_resource path="res://sprites/tiles/continue.png" type="Texture" id=9]
[ext_resource path="res://sprites/tiles/move.png" type="Texture" id=10]
[ext_resource path="res://scenes/Level.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/editor_camera.gd" type="Script" id=12]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CL" type="CanvasLayer" parent="."]

[node name="UI" type="MarginContainer" parent="CL"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="HBoxContainer" parent="CL/UI"]
margin_left = 30.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 570.0

[node name="2" type="VBoxContainer" parent="CL/UI/1"]
margin_right = 964.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CL/UI/1/2"]
margin_right = 964.0
margin_bottom = 110.0
size_flags_vertical = 3
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Welcome to the level editor! [color=lime][tornado radius=2 freq=2]Create[/tornado][/color] levels, [color=purple][tornado radius=2 freq=2]play[/tornado][/color] them, and [color=yellow][tornado radius=2 freq=2]share[/tornado][/color] them with your... uhh... friends? No, with your co-participators!
Use [color=red][wave amp=20 freq=3]RMB[/wave][/color] to choose a [color=blue][wave amp=20 freq=3]tile[/wave][/color].
Use [color=red][wave amp=20 freq=3]LMB[/wave][/color] to place a [color=blue][wave amp=20 freq=3]tile[/wave][/color], [color=red][wave amp=20 freq=3]RMB[/wave][/color] to delete it, and hold [color=red][wave amp=20 freq=3]MMB[/wave][/color] to drag the camera.[/center]"
text = "Welcome to the level editor! Create levels, play them, and share them with your... uhh... friends? No, with your co-participators!
Use RMB to choose a tile.
Use LMB to place a tile, RMB to delete it, and hold MMB to drag the camera."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideButton" type="CheckButton" parent="CL/UI/1/2"]
margin_left = 584.2
margin_top = 114.0
margin_right = 964.0
margin_bottom = 153.2
size_flags_horizontal = 8
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
button_mask = 2
text = "Hide the text. Oh, and the button too."
flat = true

[node name="3" type="HBoxContainer" parent="CL/UI/1/2"]
margin_top = 157.0
margin_right = 964.0
margin_bottom = 497.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tiles" type="VBoxContainer" parent="CL/UI/1/2/3"]
margin_right = 129.0
margin_bottom = 340.0
mouse_filter = 0

[node name="Label" type="Label" parent="CL/UI/1/2/3/Tiles"]
margin_top = -1.0
margin_right = 129.0
margin_bottom = 38.2
text = "Tile selection"

[node name="BG" type="Button" parent="CL/UI/1/2/3/Tiles"]
margin_top = 43.0
margin_right = 129.8
margin_bottom = 82.2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
toggle_mode = true
pressed = true
button_mask = 2
text = "Background"
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="CL/UI/1/2/3/Tiles"]
margin_top = 86.0
margin_right = 129.0
margin_bottom = 125.2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
toggle_mode = true
button_mask = 2
text = "Start"
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" type="Button" parent="CL/UI/1/2/3/Tiles"]
margin_top = 129.0
margin_right = 129.0
margin_bottom = 168.2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
toggle_mode = true
button_mask = 2
text = "Wall"
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="CL/UI/1/2/3/Tiles"]
margin_top = 172.0
margin_right = 129.0
margin_bottom = 211.2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
toggle_mode = true
button_mask = 2
text = "Continue"
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Break" type="Button" parent="CL/UI/1/2/3/Tiles"]
margin_top = 215.0
margin_right = 129.0
margin_bottom = 254.2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
toggle_mode = true
button_mask = 2
text = "Break"
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="I" type="Button" parent="CL/UI/1/2/3/Tiles"]
margin_top = 258.0
margin_right = 129.0
margin_bottom = 297.2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
toggle_mode = true
button_mask = 2
text = "I = 10"
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="CL/UI/1/2/3/Tiles"]
margin_top = 301.0
margin_right = 129.0
margin_bottom = 340.2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
toggle_mode = true
button_mask = 2
text = "Movable"
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu Button" type="Button" parent="CL/UI/1/2"]
margin_top = 501.0
margin_right = 59.8
margin_bottom = 540.2
size_flags_horizontal = 0
button_mask = 2
text = "Menu"

[node name="Menu" type="VBoxContainer" parent="CL/UI"]
visible = false
margin_left = 30.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 570.0
alignment = 1

[node name="Dialogs" type="VBoxContainer" parent="CL/UI/Menu"]
visible = false
margin_right = 964.0
margin_bottom = 325.0
size_flags_vertical = 3

[node name="Save Dialog" type="FileDialog" parent="CL/UI/Menu/Dialogs"]
margin_right = 964.0
margin_bottom = 540.0
rect_min_size = Vector2( 230, 80.5 )
size_flags_vertical = 3
window_title = "Save Level"
access = 2
filters = PoolStringArray( "*.tscn" )
current_dir = "/"
current_file = "level.tscn"
current_path = "/level.tscn"

[node name="Quit" type="ConfirmationDialog" parent="CL/UI/Menu/Dialogs"]
margin_left = 320.0
margin_top = 438.0
margin_right = 643.0
margin_bottom = 540.2
rect_min_size = Vector2( 230, 80.5 )
size_flags_horizontal = 4
window_title = "Are you sure you want to quit?"
dialog_text = "All unsaved changes will be lost!"

[node name="Buttons" type="VBoxContainer" parent="CL/UI/Menu"]
margin_top = 164.0
margin_right = 964.0
margin_bottom = 375.0

[node name="Return" type="Button" parent="CL/UI/Menu/Buttons"]
margin_left = 446.0
margin_right = 516.8
margin_bottom = 39.2
size_flags_horizontal = 4
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
text = "Return"
flat = true

[node name="Test" type="Button" parent="CL/UI/Menu/Buttons"]
margin_left = 456.0
margin_top = 43.0
margin_right = 506.8
margin_bottom = 82.2
size_flags_horizontal = 4
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
text = "Test"
flat = true

[node name="Save" type="Button" parent="CL/UI/Menu/Buttons"]
margin_left = 453.0
margin_top = 86.0
margin_right = 510.8
margin_bottom = 125.2
size_flags_horizontal = 4
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
text = "Save"
flat = true

[node name="Load" type="Button" parent="CL/UI/Menu/Buttons"]
margin_left = 455.0
margin_top = 129.0
margin_right = 508.8
margin_bottom = 168.2
size_flags_horizontal = 4
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
text = "Load"
flat = true

[node name="Main Menu" type="Button" parent="CL/UI/Menu/Buttons"]
margin_left = 428.0
margin_top = 172.0
margin_right = 534.8
margin_bottom = 211.2
size_flags_horizontal = 4
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
text = "Main Menu"
flat = true

[node name="Level" parent="." instance=ExtResource( 11 )]

[node name="Camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
script = ExtResource( 12 )
[connection signal="toggled" from="CL/UI/1/2/HideButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="CL/UI/1/2/3/Tiles/BG" to="." method="_on_BG_pressed"]
[connection signal="pressed" from="CL/UI/1/2/3/Tiles/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CL/UI/1/2/3/Tiles/Wall" to="." method="_on_Wall_pressed"]
[connection signal="pressed" from="CL/UI/1/2/3/Tiles/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CL/UI/1/2/3/Tiles/Break" to="." method="_on_Break_pressed"]
[connection signal="pressed" from="CL/UI/1/2/3/Tiles/I" to="." method="_on_I_pressed"]
[connection signal="pressed" from="CL/UI/1/2/3/Tiles/Move" to="." method="_on_Move_pressed"]
[connection signal="pressed" from="CL/UI/1/2/Menu Button" to="." method="_on_Menu_Button_pressed"]
[connection signal="confirmed" from="CL/UI/Menu/Dialogs/Save Dialog" to="." method="_on_Save_Dialog_confirmed"]
[connection signal="file_selected" from="CL/UI/Menu/Dialogs/Save Dialog" to="." method="_on_Save_Dialog_file_selected"]
[connection signal="confirmed" from="CL/UI/Menu/Dialogs/Quit" to="." method="_on_Quit_confirmed"]
[connection signal="pressed" from="CL/UI/Menu/Buttons/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="CL/UI/Menu/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="CL/UI/Menu/Buttons/Main Menu" to="." method="_on_Main_Menu_pressed"]
